--- a/.github/workflows/CI_IEA15.yml
+++ b/.github/workflows/CI_IEA15.yml
@@ -57,14 +57,8 @@ jobs:
         shell: bash -l {0}
         run: |
           cd OpenFAST/IEA-15-240-RWT-Monopile
+          sed --separate --in-place=BAK 's/300.0 \{1,\} TMax/10.0    TMax/' IEA-15-240-RWT-Monopile.fst
           openfast IEA-15-240-RWT-Monopile.fst
-
-      # Run OpenFAST monopile-DTU
-      - name: Run OpenFAST fixed-bottom with DTU controller
-        shell: bash -l {0}
-        run: |
-          cd OpenFAST/IEA-15-240-RWT-Monopile_wDTUcontroller
-          openfast IEA-15-240-RWT-Monopile_wDTUcontroller.fst
 
       # Run OpenFAST floating
       - name: Run OpenFAST floating
@@ -78,4 +72,13 @@ jobs:
         shell: bash -l {0}
         run: |
           cd OpenFAST/IEA-15-240-RWT-OLAF
+          sed --separate --in-place=BAK 's/300.0 \{1,\} TMax/10.0    TMax/' IEA-15-240-RWT-Monopile.fst
           openfast IEA-15-240-RWT_OLAF.fst
+
+      # Run OpenFAST monopile-DTU
+      - name: Run OpenFAST fixed-bottom with DTU controller
+        shell: bash -l {0}
+        run: |
+          cd OpenFAST/IEA-15-240-RWT-Monopile_wDTUcontroller
+          sed --separate --in-place=BAK 's/300.0 \{1,\} TMax/10.0    TMax/' IEA-15-240-RWT-Monopile_wDTUcontroller.fst
+          openfast IEA-15-240-RWT-Monopile_wDTUcontroller.fst
