getting closer to this working. .

--- a/.github/workflows/CI_IEA15.yml
+++ b/.github/workflows/CI_IEA15.yml
@@ -72,7 +72,7 @@ jobs:
         shell: bash -l {0}
         run: |
           cd OpenFAST/IEA-15-240-RWT-OLAF
-          sed --separate --in-place=BAK 's/300.0 \{1,\} TMax/10.0    TMax/' IEA-15-240-RWT-Monopile.fst
+          sed --separate --in-place=BAK 's/300.0 \{1,\} TMax/10.0    TMax/' IEA-15-240-RWT_OLAF.fst
           openfast IEA-15-240-RWT_OLAF.fst
 
       # Run OpenFAST monopile-DTU
