--- a/.github/workflows/CI_IEA15.yml
+++ b/.github/workflows/CI_IEA15.yml
@@ -68,12 +68,12 @@ jobs:
           openfast IEA-15-240-RWT-UMaineSemi.fst
 
       # Run OpenFAST monopile-DTU
-      - name: Run OpenFAST fixed-bottom with DTU controller
-        shell: bash -l {0}
-        run: |
-          cd OpenFAST/IEA-15-240-RWT-Monopile_wDTUcontroller
-          sed --separate --in-place=BAK 's/300.0 \{1,\} TMax/10.0    TMax/' IEA-15-240-RWT-Monopile_wDTUcontroller.fst
-          openfast IEA-15-240-RWT-Monopile_wDTUcontroller.fst
+      #- name: Run OpenFAST fixed-bottom with DTU controller
+      #  shell: bash -l {0}
+      #  run: |
+      #    cd OpenFAST/IEA-15-240-RWT-Monopile_wDTUcontroller
+      #    sed --separate --in-place=BAK 's/300.0 \{1,\} TMax/10.0    TMax/' IEA-15-240-RWT-Monopile_wDTUcontroller.fst
+      #    openfast IEA-15-240-RWT-Monopile_wDTUcontroller.fst
 
       # Run OpenFAST monopile-OLAF
       - name: Run OpenFAST fixed-bottom with OLAF
