WAMIT readme update and consistency edits on 1st-order inputs

--- a/OpenFAST/IEA-15-240-RWT-UMaineSemi/HydroData/wamit_inputs/IEA-15-240-RWT.cfg
+++ b/OpenFAST/IEA-15-240-RWT-UMaineSemi/HydroData/wamit_inputs/IEA-15-240-RWT.cfg
@@ -10,5 +10,5 @@
  IPERIO=2     (input frequencies in radians per second)
  ILOWHI=0     (use low-order panel method)
  MONITR=0     (do not write FORCE output data to monitor)
- NUMHDR=1     (write headers to numeric output files)
+ NUMHDR=0     (do not write headers to numeric output files)
  USERID_PATH=\WAMITv6   (directory for *.exe, *.dll, and userid.wam)
