--- a/OpenFAST/IEA-15-240-RWT-Monopile/IEA-15-240-RWT-Monopile_ROSCO.yaml
+++ b/OpenFAST/IEA-15-240-RWT-Monopile/IEA-15-240-RWT-Monopile_ROSCO.yaml
@@ -3,8 +3,8 @@
     # Turbine: IEA 15MW Reference Wind Turbine
 # ------------------------------ OpenFAST PATH DEFINITIONS ------------------------------
 path_params:
-  FAST_InputFile: 'IEA-15-240-RWT-UMaineSemi.fst'                                                                # Name of *.fst file
-  FAST_directory: '..'                     # Main OpenFAST model directory, where the *.fst lives 
+  FAST_InputFile: 'IEA-15-240-RWT-Monopile.fst'                                                                # Name of *.fst file
+  FAST_directory: '.'                     # Main OpenFAST model directory, where the *.fst lives 
   rotor_performance_filename: ../IEA-15-240-RWT/Cp_Ct_Cq.IEA15MW.txt  # Relative to FAST_directory or absolute
 
 # -------------------------------- TURBINE PARAMETERS ----------------------------------- 
@@ -12,7 +12,7 @@ turbine_params:
   rotor_inertia:      310619488.            # Rotor inertia [kg m^2], {Available in Elastodyn .sum file}
   rated_rotor_speed:  0.7916813478          # Rated rotor speed [rad/s]
   v_min:              3.                    # Cut-in wind speed [m/s] 
-  v_rated:            10.74                 # Rated wind speed [m/s]
+  v_rated:            10.59                 # Rated wind speed [m/s]
   v_max:              25.0                  # Cut-out wind speed [m/s], -- Does not need to be exact (JUST ASSUME FOR NOW)
   max_pitch_rate:     0.0349                # Maximum blade pitch rate [rad/s]
   max_torque_rate:    4500000.              # Maximum torque rate [Nm/s], {~1/4 VS_RtTq/s}
@@ -33,19 +33,15 @@ controller_params:
   Y_ControlMode:      0                     # Yaw control mode {0: no yaw control, 1: yaw rate control, 2: yaw-by-IPC}
   SS_Mode:            1                     # Setpoint Smoother mode {0: no setpoint smoothing, 1: introduce setpoint smoothing}
   WE_Mode:            2                     # Wind speed estimator mode {0: One-second low pass filtered hub height wind speed, 1: Immersion and Invariance Estimator (Ortega et al.)}
-  PS_Mode:            3                     # Pitch saturation mode {0: no pitch saturation, 1: peak shaving, 2: Cp-maximizing pitch saturation, 3: peak shaving and Cp-maximizing pitch saturation}
+  PS_Mode:            2                     # Pitch saturation mode {0: no pitch saturation, 1: peak shaving, 2: Cp-maximizing pitch saturation, 3: peak shaving and Cp-maximizing pitch saturation}
   SD_Mode:            0                     # Shutdown mode {0: no shutdown procedure, 1: pitch to max pitch at shutdown}
-  Fl_Mode:            2                     # Floating specific feedback mode {0: no nacelle velocity feedback, 1: nacelle velocity feedback}
+  Fl_Mode:            0                     # Floating specific feedback mode {0: no nacelle velocity feedback, 1: nacelle velocity feedback}
   Flp_Mode:           0                     # Flap control mode {0: no flap control, 1: steady state flap angle, 2: Proportional flap control}
   # Controller parameters       
-  # U_pc:               [14]
   zeta_pc:            1.0                   # Pitch controller desired damping ratio [-]
-  omega_pc:           0.2                   # Pitch controller desired natural frequency [rad/s]
-  zeta_vs:            0.85                  # Torque controller desired damping ratio [-]
-  omega_vs:           0.12                  # Torque controller desired natural frequency [rad/s]
-  twr_freq:           3.355 # for semi only!
-  ptfm_freq:          0.213 # for semi only!
+  omega_pc:           0.2                  # Pitch controller desired natural frequency [rad/s]
+  zeta_vs:            0.85                   # Torque controller desired damping ratio [-]
+  omega_vs:           0.12                 # Torque controller desired natural frequency [rad/s]
   # Optional - these can be defined, but do not need to be
   min_pitch:          0.0                   # Minimum pitch angle [rad], {default = 0 degrees}
   vs_minspd:          0.523598775           # Minimum rotor speed [rad/s], {default = 0 rad/s}
-  ps_percent:         0.8                   # Percent peak shaving  [%, <= 1 ], {default = 80%}
