--- a/OpenFAST/IEA-15-240-RWT-UMaineSemi/HydroData/wamit_inputs_2ndOrder/IEA-15-240-RWT_2nd.cfg
+++ b/OpenFAST/IEA-15-240-RWT-UMaineSemi/HydroData/wamit_inputs_2ndOrder/IEA-15-240-RWT_2nd.cfg
@@ -1,6 +1,8 @@
  ipltdat=5
  maxscr=1024  (assign a maximum block of 1024*1024 RAM for scratch LHS)
- ISOR=0       (omit ISOR in POT file, include source formulation)
+ I2ND=1       (second-order)
+ IALTFRC=2    (use the second form of the .frc file)
+ ISOR=1       (evaluate source strength, required for 2nd order)
  ISOLVE=1     (use direct solver)
  ISCATT=0     (solve for total diffraction potential, not scattering)
  IQUAD=0      (omit IQUAD in POT file, use single-node quadrature)
@@ -11,4 +13,4 @@
  ILOWHI=0     (use low-order panel method)
  MONITR=0     (do not write FORCE output data to monitor)
  NUMHDR=1     (write headers to numeric output files)
- USERID_PATH=\WAMITv6   (directory for *.exe, *.dll, and userid.wam)
+ USERID_PATH=c:/WAMIT/v6414   (directory for *.exe, *.dll, and userid.wam)
