--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,18 @@
 *.bts
 *.dbg
 
+# HAWC2
+**/bodyeig/*
+**/res/*
+**/ind/*
+**/turb/*
+**/visualization/*
+*.pwr
+*_step.htc
+*_hs2.htc
+*_turb.htc
+*_FPM.htc
+
 # OpenMDAO
 openmdao_log.txt
 openmdao_checks.out
