--- a/OpenFAST/IEA-15-240-RWT-UMaineSemi/HydroData/wamit_inputs_2ndOrder/IEA-15-240-RWT_2nd.cfg
+++ b/OpenFAST/IEA-15-240-RWT-UMaineSemi/HydroData/wamit_inputs_2ndOrder/IEA-15-240-RWT_2nd.cfg
@@ -1,8 +1,9 @@
  ipltdat=5
  maxscr=1024  (assign a maximum block of 1024*1024 RAM for scratch LHS)
  I2ND=1       (second-order)
+ IPOTEN=1     (run POTEN)
  IALTFRC=2    (use the second form of the .frc file)
- ISOR=1       (evaluate source strength, required for 2nd order)
+ ISOR=0       (evaluate source strength; not needed for high-order panel method)
  ISOLVE=1     (use direct solver)
  ISCATT=0     (solve for total diffraction potential, not scattering)
  IQUAD=0      (omit IQUAD in POT file, use single-node quadrature)
@@ -10,7 +11,9 @@
  IDIAG=0      (omit IDIAG in POT file, panel length based on area)
  IRR=1        (omit IRR in POT file, irregular-frequency removal)
  IPERIO=2     (input frequencies in radians per second)
- ILOWHI=0     (use low-order panel method)
+ ILOWHI=1     (use high-order panel method)
+ ILOWGDF=1    (write low order gdf)
+ PANEL_SIZE=2.5 (average length of panel)
  MONITR=0     (do not write FORCE output data to monitor)
  NUMHDR=1     (write headers to numeric output files)
  USERID_PATH=c:/WAMIT/v6414   (directory for *.exe, *.dll, and userid.wam)
